opa/webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVVVlMN3B5UnFYbEdvRTRJbVdEVXhMNC9Zc0xRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSXhNRGN3TVRFeE1USTBPVm9ZRHpJeQpPVFV3TkRFMk1URXhNalE1V2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURpVTQ2LzVQUmlDVklMUUZCTlZGREpDTG93RkV4WXcwQlMKNm1VYzRmSkk4S0oyNnhrMWtuZERhQXhtejhaWjRTZ3dRWjJOa3lSUlV3RDhQWHpzVGRtbGJZUG8rMGVid0NReQpUcmpsNDJBWFFO [...]
      service:
        namespace: opa
        name: opa
